Handle and expose interesting file content
